<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_normal"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/login_background"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_shape_input"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_pass"
                android:textColor="?attr/user_information_left_text"
                android:textSize="@dimen/login_form_text" />

            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/please_input_oldpassword"
                android:inputType="textPassword"
                android:textColor="?attr/login_form_username"
                android:textColorHint="?attr/login_form_hint"
                android:textSize="@dimen/login_form_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_shape_input"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pass"
                android:textColor="?attr/user_information_left_text"
                android:textSize="@dimen/login_form_text" />

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/please_input_newpassword"
                android:inputType="textPassword"
                android:textColor="?attr/login_form_username"
                android:textColorHint="?attr/login_form_hint"
                android:textSize="@dimen/login_form_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_shape_input"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reinput"
                android:textColor="?attr/user_information_left_text"
                android:textSize="@dimen/login_form_text" />

            <EditText
                android:id="@+id/et_new_pass_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/please_reinput_newpassword"
                android:inputType="textPassword"
                android:textColor="?attr/login_form_username"
                android:textColorHint="?attr/login_form_hint"
                android:textSize="@dimen/login_form_text" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="?attr/shape_button_rectangle"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/login_form_text" />
    </LinearLayout>

</LinearLayout>