<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_normal"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/login_background"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_userphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="?attr/login_form_hint">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_shape_input"
                android:drawableLeft="@drawable/login_phone_number"
                android:drawablePadding="5dp"
                android:hint="@string/please_input_your_phone"
                android:textColor="?attr/login_form_username"
                android:textColorHint="?attr/login_form_hint"
                android:textSize="@dimen/login_form_text" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_message_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="?attr/login_form_hint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_shape_input"
                    android:drawableLeft="@drawable/regist_verify_code"
                    android:drawablePadding="5dp"
                    android:hint="@string/please_input_message_code"
                    android:inputType="textPassword"
                    android:textColor="?attr/login_form_username"
                    android:textColorHint="?attr/login_form_hint"
                    android:textSize="@dimen/login_form_text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="?attr/shape_button_rectangle"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/get_verify_code"
                android:textColor="?attr/login_form_username" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="?attr/shape_button_rectangle"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/login_form_text" />


    </LinearLayout>

</LinearLayout>